Checking in changes prior to tagging of version 0.07.
Changelog diff is:

diff --git a/Changes b/Changes
index 555cac4..d593936 100644
--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Sledge::Authorizer::BasicAuth

+0.07
+
+    - fixed testing deps
+
 0.06

     - modernized package with M::B

--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: 'Basic Authentication module for Sledge'
 author:
   - 'MATSUNO Tokuhiro E<lt>tokuhirom@gmail.comE<gt>'
 build_requires:
+  Test::Exception: 0
   Test::More: 0.98
 configure_requires:
   Module::Build: 0.38
@@ -20,10 +21,10 @@ no_index:
 provides:
   Sledge::Authorizer::BasicAuth:
     file: lib/Sledge/Authorizer/BasicAuth.pm
-    version: 0.06
+    version: 0.07
 requires:
   Class::Data::Inheritable: 0.08
   perl: 5.008001
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.06
+version: 0.07
